# docs/swagger.yaml
@@ -10,186 +10,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/articles/{id}:
-    get:
-      consumes:
-      - application/json
-      description: 根据文章ID获取文章数据
-      parameters:
-      - description: 文章ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 返回文章信息
-          schema:
-            $ref: '#/definitions/app.Response'
-        "400":
-          description: 参数验证失败
-          schema:
-            $ref: '#/definitions/app.Response'
-        "404":
-          description: 文章不存在
-          schema:
-            $ref: '#/definitions/app.Response'
-      summary: 获取单篇文章的详细信息
-      tags:
-      - 文章
-  /api/v1/tags:
-    get:
-      consumes:
-      - application/json
-      description: 根据请求的参数（如标签名、状态）获取标签数据
-      parameters:
-      - description: 标签名称
-        in: query
-        name: name
-        type: string
-      - description: 标签状态
-        in: query
-        name: state
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 返回标签列表和总数
-          schema:
-            $ref: '#/definitions/app.Response'
-      summary: 获取标签列表
-      tags:
-      - 标签
-    post:
-      consumes:
-      - application/json
-      description: 创建新的标签
-      parameters:
-      - description: 标签名称
-        in: query
-        name: name
-        required: true
-        type: string
-      - description: 标签状态
-        in: query
-        name: state
-        type: integer
-      - description: 创建人
-        in: query
-        name: created_by
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 返回成功信息
-          schema:
-            $ref: '#/definitions/app.Response'
-        "400":
-          description: 参数验证失败
-          schema:
-            $ref: '#/definitions/app.Response'
-        "409":
-          description: 标签已存在
-          schema:
-            $ref: '#/definitions/app.Response'
-      summary: 新增文章标签
-      tags:
-      - 标签
-  /api/v1/tags/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: 删除指定标签
-      parameters:
-      - description: 标签ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 返回成功信息
-          schema:
-            $ref: '#/definitions/app.Response'
-        "400":
-          description: 参数验证失败
-          schema:
-            $ref: '#/definitions/app.Response'
-        "404":
-          description: 标签不存在
-          schema:
-            $ref: '#/definitions/app.Response'
-      summary: 删除文章标签
-      tags:
-      - 标签
-    put:
-      consumes:
-      - application/json
-      description: 编辑已有标签的信息
-      parameters:
-      - description: 标签ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 标签名称
-        in: query
-        name: name
-        type: string
-      - description: 标签状态
-        in: query
-        name: state
-        type: integer
-      - description: 修改人
-        in: query
-        name: modified_by
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 返回成功信息
-          schema:
-            $ref: '#/definitions/app.Response'
-        "400":
-          description: 参数验证失败
-          schema:
-            $ref: '#/definitions/app.Response'
-        "404":
-          description: 标签不存在
-          schema:
-            $ref: '#/definitions/app.Response'
-      summary: 修改文章标签
-      tags:
-      - 标签
-  /api/v1/tags/import:
-    post:
-      parameters:
-      - description: Image File
-        in: formData
-        name: image
-        required: true
-        type: file
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/app.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/app.Response'
-      summary: Import Image
-  /articles:
+  /api/v1/articles:
     get:
       consumes:
       - application/json
@@ -277,7 +98,7 @@ paths:
       summary: 新增一篇文章
       tags:
       - 文章
-  /articles/{id}:
+  /api/v1/articles/{id}:
     delete:
       consumes:
       - application/json
@@ -308,6 +129,34 @@ paths:
           schema:
             $ref: '#/definitions/app.Response'
       summary: 删除文章
+      tags:
+      - 文章
+    get:
+      consumes:
+      - application/json
+      description: 根据文章ID获取文章数据
+      parameters:
+      - description: 文章ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回文章信息
+          schema:
+            $ref: '#/definitions/app.Response'
+        "400":
+          description: 参数验证失败
+          schema:
+            $ref: '#/definitions/app.Response'
+        "404":
+          description: 文章不存在
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 获取单篇文章的详细信息
       tags:
       - 文章
     put:
@@ -367,6 +216,144 @@ paths:
       summary: 修改文章
       tags:
       - 文章
+  /api/v1/tags:
+    get:
+      consumes:
+      - application/json
+      description: 根据请求的参数（如标签名、状态）获取标签数据
+      parameters:
+      - description: 标签名称
+        in: query
+        name: name
+        type: string
+      - description: 标签状态
+        in: query
+        name: state
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回标签列表和总数
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 获取标签列表
+      tags:
+      - 标签
+    post:
+      consumes:
+      - application/json
+      description: 创建新的标签
+      parameters:
+      - description: 标签名称
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: 标签状态
+        in: query
+        name: state
+        type: integer
+      - description: 创建人
+        in: query
+        name: created_by
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功信息
+          schema:
+            $ref: '#/definitions/app.Response'
+        "400":
+          description: 标签不存在
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 新增文章标签
+      tags:
+      - 标签
+  /api/v1/tags/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 删除指定标签
+      parameters:
+      - description: 标签ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功信息
+          schema:
+            $ref: '#/definitions/app.Response'
+        "400":
+          description: 标签不存在
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 删除文章标签
+      tags:
+      - 标签
+    put:
+      consumes:
+      - application/json
+      description: 编辑已有标签的信息
+      parameters:
+      - description: 标签ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 标签名称
+        in: query
+        name: name
+        type: string
+      - description: 标签状态
+        in: query
+        name: state
+        type: integer
+      - description: 修改人
+        in: query
+        name: modified_by
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回成功信息
+          schema:
+            $ref: '#/definitions/app.Response'
+        "400":
+          description: 标签不存在
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 修改文章标签
+      tags:
+      - 标签
+  /api/v1/tags/import:
+    post:
+      parameters:
+      - description: Image File
+        in: formData
+        name: image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Import Image
   /auth:
     get:
       consumes:
